To be continued

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     </div>
 
     <div class="container" id="desimaalit">
-        <input type="radio" name="valittu" id="yksiDesimaali" checked>
+        <input type="radio" name="valittu" id="yksiDesimaali" value="1" checked>
         <label for="yksiDesimaali">1 desimaali</label><br>
-        <input type="radio" name="valittu" id="kaksiDesimaalia">
+        <input type="radio" name="valittu" id="kaksiDesimaalia" value="2">
         <label for="kaksiDesimaalia">2 desimaalia</label><br>
-        <input type="radio" name="valittu" id="kolmeDesimaalia">
+        <input type="radio" name="valittu" id="kolmeDesimaalia" value="3">
         <label for="kolmeDesimaalia">3 desimaalia</label>
     </div>
     
